--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "deepface>=0.0.98",
     "matplotlib>=3.10.8",
     "opencv-python>=4.13.0.92",
+    "tf-keras>=2.20.1",
 ]
